fix: Fix l'alignement des radios et checkboxes (#3309)
* fix: Fix l'alignement des radios quand la police n'est pas 1.125rem

* fix: Fix l'alignement des checkboxes quand la police n'est pas 1.125rem

* fix: Supprime le scale des radio avec la taille de police

* style: Fix espacement dans calc

--- a/src/client/components/ui/Radio/Radio.module.scss
+++ b/src/client/components/ui/Radio/Radio.module.scss
@@ -2,10 +2,13 @@
 @use "@styles/utilities";
 @use "@styles/components/form/variables";
 
+$radio-width: 1rem;
+$radio-padding: .5rem;
+
 %radio {
   content: "";
-  width: 1rem;
-  height: 1rem;
+  width: $radio-width;
+  aspect-ratio: 1;
   border-radius: 50%;
   box-shadow: inset 0 0 0 1px utilities-deprecated.$color-on-surface;
 }
@@ -38,7 +41,8 @@
 
   input[type=radio] + label {
     position: relative;
-    padding: 0.75rem 0 .75rem 2rem;
+    // FIXME (GAFI 06-09-2024): Probablement moyen de faire beaucoup mieux avec du grid
+    padding: 0.75rem 0 0.75rem calc($radio-width + 2 * $radio-padding);
     -webkit-tap-highlight-color: transparent;
     display: flex;
     flex-direction: row;
@@ -50,9 +54,9 @@
   input[type=radio] + label::before {
     display: block;
     position: absolute;
-    top: 0;
-    left: 0.5rem;
-    margin-top: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    left: $radio-padding;
     @extend %radio
   }
 
